--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="https://www.ikea.com/global/assets/logos/brand/ikea.svg">
     <title>Demo Visor 3D</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
