--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <main class=" flex flex-col md:flex-row px-10 py-4 gap-8 ">
         <ul class="flex md:flex-col gap-4 w-full md:w-1/4">
             <li class="border-black border-2 rounded-lg p-1" id="img1btn">
-                <img src="https://www.ikea.com/mx/es/images/products/fridhult-sofa-cama-knisa-gris-claro__1194665_pe902051_s5.jpg?f=u" alt="">
+                <img src="https://www.ikea.com/mx/es/images/products/fridhult-sofa-cama-knisa-gris-claro__1194665_pe902051_s5.jpg?f=u" alt="" class="object-cover w-full h-full">
             </li>
             <li class="border-black border-2 rounded-lg p-1 " id="img2btn">
-                <img src="https://www.ikea.com/mx/es/images/products/fridhult-sofa-cama-knisa-gris-claro__1194667_pe902050_s5.jpg?f=u" alt="">
+                <img src="https://www.ikea.com/mx/es/images/products/fridhult-sofa-cama-knisa-gris-claro__1194667_pe902050_s5.jpg?f=u" alt="" class="object-cover w-full h-full">
             </li>
             <li class="border-black border-2 rounded-lg p-1" id="img3btn">
-                <img src="https://www.ikea.com/mx/es/images/products/fridhult-sofa-cama-knisa-gris-claro__1255203_pe924450_s5.jpg?f=u" alt="">
+                <img src="https://www.ikea.com/mx/es/images/products/fridhult-sofa-cama-knisa-gris-claro__1255203_pe924450_s5.jpg?f=u" alt="" class="object-cover w-full h-full">
             </li>
             <li>
                 <button id="view3d" class="bg-black text-white rounded-xl h-full md:h-auto md:text-xl text-2xl p-4 flex items-center gap-2 font-semibold border-2 border-black hover:bg-white hover:text-black">
